gen/org/argus/cit/intellij/jawa/lang/parser/JawaParser.java
// This is a generated file. Not intended for manual editing.
package org.argus.cit.intellij.jawa.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.argus.cit.intellij.jawa.lang.psi.JawaElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JawaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACCESS_EXPRESSION) {
      r = AccessExpression(b, 0);
    }
    else if (t == ACCESS_FLAG_ANNOTATION) {
      r = AccessFlagAnnotation(b, 0);
    }
    else if (t == ANNOTATION) {
      r = Annotation(b, 0);
    }
    else if (t == ANNOTATION_KEY) {
      r = AnnotationKey(b, 0);
    }
    else if (t == ARG_CLAUSE) {
      r = ArgClause(b, 0);
    }
    else if (t == ASSIGNMENT_STATEMENT) {
      r = AssignmentStatement(b, 0);
    }
    else if (t == BINARY_EXPRESSION) {
      r = BinaryExpression(b, 0);
    }
    else if (t == CMP) {
      r = CMP(b, 0);
    }
    else if (t == CALL_LHS) {
      r = CallLhs(b, 0);
    }
    else if (t == CALL_STATEMENT) {
      r = CallStatement(b, 0);
    }
    else if (t == CAST_EXPRESSION) {
      r = CastExpression(b, 0);
    }
    else if (t == CATCH_CLAUSE) {
      r = CatchClause(b, 0);
    }
    else if (t == CATCH_RANGE) {
      r = CatchRange(b, 0);
    }
    else if (t == CLASS_OR_INTERFACE_DECLARATION) {
      r = ClassOrInterfaceDeclaration(b, 0);
    }
    else if (t == CMP_EXPRESSION) {
      r = CmpExpression(b, 0);
    }
    else if (t == CONST_CLASS_EXPRESSION) {
      r = ConstClassExpression(b, 0);
    }
    else if (t == EXCEPTION_EXPRESSION) {
      r = ExceptionExpression(b, 0);
    }
    else if (t == EXPRESSION_LHS) {
      r = Expression_LHS(b, 0);
    }
    else if (t == EXPRESSION_RHS) {
      r = Expression_RHS(b, 0);
    }
    else if (t == EXTEND_AND_IMPLEMENT) {
      r = ExtendAndImplement(b, 0);
    }
    else if (t == EXTENDS_AND_IMPLEMENTS_CLAUSE) {
      r = ExtendsAndImplementsClause(b, 0);
    }
    else if (t == FIELD_DECLARATION) {
      r = FieldDeclaration(b, 0);
    }
    else if (t == FIELD_DEF_SYMBOL) {
      r = FieldDefSymbol(b, 0);
    }
    else if (t == FIELD_NAME_SYMBOL) {
      r = FieldNameSymbol(b, 0);
    }
    else if (t == GOTO_STATEMENT) {
      r = GotoStatement(b, 0);
    }
    else if (t == IF_STATEMENT) {
      r = IfStatement(b, 0);
    }
    else if (t == INDEXING_EXPRESSION) {
      r = IndexingExpression(b, 0);
    }
    else if (t == INSTANCE_FIELD_DECLARATION) {
      r = InstanceFieldDeclaration(b, 0);
    }
    else if (t == INSTANCE_FIELD_DECLARATION_BLOCK) {
      r = InstanceFieldDeclarationBlock(b, 0);
    }
    else if (t == INSTANCEOF_EXPRESSION) {
      r = InstanceofExpression(b, 0);
    }
    else if (t == JW_BODY) {
      r = JwBody(b, 0);
    }
    else if (t == JW_TYPE) {
      r = JwType(b, 0);
    }
    else if (t == KIND_ANNOTATION) {
      r = KindAnnotation(b, 0);
    }
    else if (t == LENGTH_EXPRESSION) {
      r = LengthExpression(b, 0);
    }
    else if (t == LITERAL_EXPRESSION) {
      r = LiteralExpression(b, 0);
    }
    else if (t == LOCAL_VAR_DECLARATION) {
      r = LocalVarDeclaration(b, 0);
    }
    else if (t == LOCATION) {
      r = Location(b, 0);
    }
    else if (t == LOCATION_DEF_SYMBOL) {
      r = LocationDefSymbol(b, 0);
    }
    else if (t == LOCATION_SYMBOL) {
      r = LocationSymbol(b, 0);
    }
    else if (t == METHOD_DECLARATION) {
      r = MethodDeclaration(b, 0);
    }
    else if (t == METHOD_DEF_SYMBOL) {
      r = MethodDefSymbol(b, 0);
    }
    else if (t == METHOD_NAME_SYMBOL) {
      r = MethodNameSymbol(b, 0);
    }
    else if (t == MONITOR_STATEMENT) {
      r = MonitorStatement(b, 0);
    }
    else if (t == NUMBER_LITERAL) {
      r = NUMBER_LITERAL(b, 0);
    }
    else if (t == NAME_EXPRESSION) {
      r = NameExpression(b, 0);
    }
    else if (t == NEW_EXPRESSION) {
      r = NewExpression(b, 0);
    }
    else if (t == NULL_EXPRESSION) {
      r = NullExpression(b, 0);
    }
    else if (t == PARAM) {
      r = Param(b, 0);
    }
    else if (t == PARAM_CLAUSE) {
      r = ParamClause(b, 0);
    }
    else if (t == RETURN_STATEMENT) {
      r = ReturnStatement(b, 0);
    }
    else if (t == SIGNATURE_ANNOTATION) {
      r = SignatureAnnotation(b, 0);
    }
    else if (t == SIGNATURE_SYMBOL) {
      r = SignatureSymbol(b, 0);
    }
    else if (t == STATEMENT) {
      r = Statement(b, 0);
    }
    else if (t == STATIC_FIELD_DECLARATION) {
      r = StaticFieldDeclaration(b, 0);
    }
    else if (t == STATIC_FIELD_DEF_SYMBOL) {
      r = StaticFieldDefSymbol(b, 0);
    }
    else if (t == STATIC_FIELD_NAME_SYMBOL) {
      r = StaticFieldNameSymbol(b, 0);
    }
    else if (t == SWITCH_CASE) {
      r = SwitchCase(b, 0);
    }
    else if (t == SWITCH_DEFAULT_CASE) {
      r = SwitchDefaultCase(b, 0);
    }
    else if (t == SWITCH_STATEMENT) {
      r = SwitchStatement(b, 0);
    }
    else if (t == THROW_STATEMENT) {
      r = ThrowStatement(b, 0);
    }
    else if (t == TUPLE_EXPRESSION) {
      r = TupleExpression(b, 0);
    }
    else if (t == TYPE_ANNOTATION) {
      r = TypeAnnotation(b, 0);
    }
    else if (t == TYPE_DEF_SYMBOL) {
      r = TypeDefSymbol(b, 0);
    }
    else if (t == TYPE_EXPRESSION) {
      r = TypeExpression(b, 0);
    }
    else if (t == TYPE_FRAGMENT) {
      r = TypeFragment(b, 0);
    }
    else if (t == TYPE_FRAGMENT_WITH_INIT) {
      r = TypeFragmentWithInit(b, 0);
    }
    else if (t == TYPE_SYMBOL) {
      r = TypeSymbol(b, 0);
    }
    else if (t == UNARY_EXPRESSION) {
      r = UnaryExpression(b, 0);
    }
    else if (t == VAR_DEF_SYMBOL) {
      r = VarDefSymbol(b, 0);
    }
    else if (t == VAR_SYMBOL) {
      r = VarSymbol(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return CompilationUnit(b, l + 1);
  }

  /* ********************************************************** */
  // VarSymbol '.' FieldNameSymbol
  public static boolean AccessExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessExpression")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && FieldNameSymbol(b, l + 1);
    exit_section_(b, m, ACCESS_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // '@AccessFlag' ID?
  public static boolean AccessFlagAnnotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessFlagAnnotation")) return false;
    if (!nextTokenIs(b, ACCESS_FLAG_KEY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ACCESS_FLAG_KEY);
    r = r && AccessFlagAnnotation_1(b, l + 1);
    exit_section_(b, m, ACCESS_FLAG_ANNOTATION, r);
    return r;
  }

  // ID?
  private static boolean AccessFlagAnnotation_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessFlagAnnotation_1")) return false;
    consumeToken(b, ID);
    return true;
  }

  /* ********************************************************** */
  // TypeAnnotation | SignatureAnnotation | KindAnnotation | AccessFlagAnnotation | AnnotationKey ID?
  public static boolean Annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION, "<annotation>");
    r = TypeAnnotation(b, l + 1);
    if (!r) r = SignatureAnnotation(b, l + 1);
    if (!r) r = KindAnnotation(b, l + 1);
    if (!r) r = AccessFlagAnnotation(b, l + 1);
    if (!r) r = Annotation_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // AnnotationKey ID?
  private static boolean Annotation_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AnnotationKey(b, l + 1);
    r = r && Annotation_4_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ID?
  private static boolean Annotation_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation_4_1")) return false;
    consumeToken(b, ID);
    return true;
  }

  /* ********************************************************** */
  // '@' ID
  public static boolean AnnotationKey(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AnnotationKey")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && consumeToken(b, ID);
    exit_section_(b, m, ANNOTATION_KEY, r);
    return r;
  }

  /* ********************************************************** */
  // '(' (VarSymbol (',' VarSymbol)*)? ')'
  public static boolean ArgClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && ArgClause_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARG_CLAUSE, r);
    return r;
  }

  // (VarSymbol (',' VarSymbol)*)?
  private static boolean ArgClause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1")) return false;
    ArgClause_1_0(b, l + 1);
    return true;
  }

  // VarSymbol (',' VarSymbol)*
  private static boolean ArgClause_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && ArgClause_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' VarSymbol)*
  private static boolean ArgClause_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ArgClause_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArgClause_1_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' VarSymbol
  private static boolean ArgClause_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgClause_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && VarSymbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression_LHS ':=' Expression_RHS KindAnnotation? TypeAnnotation?
  public static boolean AssignmentStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement")) return false;
    if (!nextTokenIs(b, "<assignment statement>", ID, STATIC_ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT, "<assignment statement>");
    r = Expression_LHS(b, l + 1);
    r = r && consumeToken(b, ASSIGN_OP);
    r = r && Expression_RHS(b, l + 1);
    r = r && AssignmentStatement_3(b, l + 1);
    r = r && AssignmentStatement_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KindAnnotation?
  private static boolean AssignmentStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_3")) return false;
    KindAnnotation(b, l + 1);
    return true;
  }

  // TypeAnnotation?
  private static boolean AssignmentStatement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_4")) return false;
    TypeAnnotation(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // VarSymbol binary_op (VarSymbol|NUMBER_LITERAL|'null')
  public static boolean BinaryExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpression")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && binary_op(b, l + 1);
    r = r && BinaryExpression_2(b, l + 1);
    exit_section_(b, m, BINARY_EXPRESSION, r);
    return r;
  }

  // VarSymbol|NUMBER_LITERAL|'null'
  private static boolean BinaryExpression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpression_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    if (!r) r = NUMBER_LITERAL(b, l + 1);
    if (!r) r = consumeToken(b, NULL_LITERAL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'fcmpl' | 'fcmpg' | 'dcmpl' | 'dcmpg' | 'lcmp'
  public static boolean CMP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CMP")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CMP, "<cmp>");
    r = consumeToken(b, FCMPL);
    if (!r) r = consumeToken(b, FCMPG);
    if (!r) r = consumeToken(b, DCMPL);
    if (!r) r = consumeToken(b, DCMPG);
    if (!r) r = consumeToken(b, LCMP);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // VarSymbol ':='
  public static boolean CallLhs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallLhs")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VarSymbol(b, l + 1);
    r = r && consumeToken(b, ASSIGN_OP);
    exit_section_(b, m, CALL_LHS, r);
    return r;
  }

  /* ********************************************************** */
  // 'call' CallLhs? MethodNameSymbol ArgClause SignatureAnnotation TypeAnnotation KindAnnotation
  public static boolean CallStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallStatement")) return false;
    if (!nextTokenIs(b, CALL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CALL);
    r = r && CallStatement_1(b, l + 1);
    r = r && MethodNameSymbol(b, l + 1);
    r = r && ArgClause(b, l + 1);
    r = r && SignatureAnnotation(b, l + 1);
    r = r && TypeAnnotation(b, l + 1);
    r = r && KindAnnotation(b, l + 1);
    exit_section_(b, m, CALL_STATEMENT, r);
    return r;
  }

  // CallLhs?
  private static boolean CallStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallStatement_1")) return false;
    CallLhs(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '(' JwType ')' VarSymbol
  public static boolean CastExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastExpression")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && JwType(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && VarSymbol(b, l + 1);
    exit_section_(b, m, CAST_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // 'catch' JwType CatchRange 'goto' LocationSymbol ';'
  public static boolean CatchClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchClause")) return false;
    if (!nextTokenIs(b, CATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH);
    r = r && JwType(b, l + 1);
    r = r && CatchRange(b, l + 1);
    r = r && consumeToken(b, GOTO);
    r = r && LocationSymbol(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, m, CATCH_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // '@' '[' LocationSymbol '..' LocationSymbol ']'
  public static boolean CatchRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CatchRange")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CATCH_RANGE, null);
    r = consumeToken(b, AT);
    r = r && consumeToken(b, LBRACKET);
    p = r; // pin = 2
    r = r && report_error_(b, LocationSymbol(b, l + 1));
    r = p && report_error_(b, consumeToken(b, RANGE)) && r;
    r = p && report_error_(b, LocationSymbol(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'record' TypeDefSymbol KindAnnotation AccessFlagAnnotation ExtendsAndImplementsClause? InstanceFieldDeclarationBlock StaticFieldDeclaration* MethodDeclaration*
  public static boolean ClassOrInterfaceDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration")) return false;
    if (!nextTokenIs(b, CLASS_OR_INTERFACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CLASS_OR_INTERFACE);
    r = r && TypeDefSymbol(b, l + 1);
    r = r && KindAnnotation(b, l + 1);
    r = r && AccessFlagAnnotation(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_4(b, l + 1);
    r = r && InstanceFieldDeclarationBlock(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_6(b, l + 1);
    r = r && ClassOrInterfaceDeclaration_7(b, l + 1);
    exit_section_(b, m, CLASS_OR_INTERFACE_DECLARATION, r);
    return r;
  }

  // ExtendsAndImplementsClause?
  private static boolean ClassOrInterfaceDeclaration_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_4")) return false;
    ExtendsAndImplementsClause(b, l + 1);
    return true;
  }

  // StaticFieldDeclaration*
  private static boolean ClassOrInterfaceDeclaration_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_6")) return false;
    int c = current_position_(b);
    while (true) {
      if (!StaticFieldDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassOrInterfaceDeclaration_6", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // MethodDeclaration*
  private static boolean ClassOrInterfaceDeclaration_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassOrInterfaceDeclaration_7")) return false;
    int c = current_position_(b);
    while (true) {
      if (!MethodDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassOrInterfaceDeclaration_7", c)) break;
      c = current_position_(b);
    }
    return true;
  }
